freiland/css: height fixes, main shows overflow

--- a/wordpress/wp-content/themes/freiland/style.css
+++ b/wordpress/wp-content/themes/freiland/style.css
@@ -80,6 +80,7 @@ body, input, textarea, .page-title span, .pingback a.url {
 	padding-left: 200px;
 	position: relative;
 	height: 75%;
+	overflow: visible!important;
 }
 
 #container {
